# PopMp4

./: .gitignore  .gitmodules  CMakeLists.txt  Readme.md
.github/workflows/: Build_AppleFramework.yml  Build_AppleUniversal.yml
PopMp4.SwiftPackage/: Package.swift
PopMp4.SwiftPackage/PopMp4.xcframework/: Info.plist
PopMp4.SwiftPackage/PopMp4.xcframework/macos-arm64_x86_64/PopMp4.framework/: PopMp4
PopMp4.SwiftPackage/PopMp4.xcframework/macos-arm64_x86_64/PopMp4.framework/Versions/A/: PopMp4
PopMp4.SwiftPackage/PopMp4.xcframework/macos-arm64_x86_64/PopMp4.framework/Versions/A/Headers/: PopMp4.h
PopMp4.SwiftPackage/PopMp4.xcframework/macos-arm64_x86_64/PopMp4.framework/Versions/A/Modules/: module.modulemap
PopMp4.SwiftPackage/PopMp4.xcframework/macos-arm64_x86_64/PopMp4.framework/Versions/A/Resources/: Info.plist
PopMp4.SwiftPackage/PopMp4Api/: PopMp4Api.cpp  PopMp4Framework.h
PopMp4.SwiftPackage/PopMp4Objc/: PopMp4Api.mm
PopMp4.SwiftPackage/PopMp4Objc/include/: PopMp4Api.h
PopMp4.SwiftPackage/PopMp4Swift/: PopMp4.swift  PopMp4Swift.swift
PopMp4.xcodeproj/: project.pbxproj
PopMp4.xcodeproj/xcshareddata/xcschemes/: PopMp4_Framework.xcscheme  PopMp4_Universal.xcscheme
Source/: InstanceManager.hpp  Mp4Decoder.cpp  Mp4Decoder.hpp  Mp4Parser.cpp  Mp4Parser.h  Mp4Parser.hpp  PopMp4.cpp  PopMp4.h  PopMp4.hpp  TestApp.cpp
Source_Apple/: Apple.xcconfig  BuildUniversalFramework.sh  Macos_Framework.xcconfig  Macos_TestApp.xcconfig  PopMp4Framework.h  UniversalFramework.xcconfig  Version.xcconfig
Source_TestApp/: TestApp.cpp
(+1 files in other folders)
